--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate": "^0.14.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "prisma": "^6.14.0",
     "react": "19.1.0",
