--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@neondatabase/serverless": "github:neondatabase/serverless",
     "@prisma/adapter-neon": "^6.14.0",
     "@prisma/client": "^6.14.0",
